Documentation: add instructions for starting rice in debug mode